# pyteach

./: README.md  pyproject.toml
pyteach/: __init__.py  __main__.py  cli.py
pyteach/engine/: __init__.py  grader.py  loader.py  persistence.py  runner.py
pyteach/utils/: __init__.py  formatting.py  helpers.py
